--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
   <h1>Hello MesloLGS Nerd Font</h1>
-  <p>If you see this line in the Meslo font, the link tag is working.</p>
+  <p>If you see this line in the Meslo font, the link tag is working</p>
 </body>
 </html>
