--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <body>
   <h1>Hello MesloLGS Nerd Font</h1>
   <p>If you see this line in the Meslo font, the link tag is working </p>
+  <p>Stylesheet: <a href="https://greglamb.github.io/MesloLGSNF-web-fonts/stylesheet.css">https://greglamb.github.io/MesloLGSNF-web-fonts/stylesheet.css</a></p>
 </body>
 </html>
